<resources>
    <string name="app_name">MundialJoaquinFernandez</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="level_text">Level %1$d</string>
    <!-- -
    This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
    For more information, see https://support.google.com/admob/answer/3052638
<!- -->
    <string name="interstitial_ad_unit_id">YOUR_INTERSTITIAL_AD_UNIT_ID</string>
    <string name="equipo_visitante">Equipo Visitante</string>
    <string name="equipo_local">Equipo Local</string>
    <string name="jugar">¡Jugar!</string>
    <string name="lista_equipos">Lista Equipos</string>
    <string name="seleccionar_equipos">Seleccionar equipos</string>
    <string name="ir_a_listado_de_equipos">Ir a listado de equipos</string>
    <string name="pantallas">Pantallas</string>
    <string name="nombre_equipo">Nombre Equipo</string>
    <string name="ver_listado">Ver listado</string>
</resources>